k8s/manifest example/deploy-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployments
  labels:
    env: prod
    app: main
    tier: backend
    owner: alex
spec:
  selector:
    matchLabels:
      project: pro
  template:
    metadata:
      labels:
        project: pro
    spec:
      containers:
        - name: asshole
          image: nelson9291/k8s-example:latest
          ports:
            - containerPort: 8080
