k8s/manifest example/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    env: prod
    app: main
    tier: backend
    owner: alex
spec:
  containers:
  - name: my-container-test
    image: nelson9291/k8s-example:latest 
    ports:
      - containerPort: 8080
