k8s/manifest example/service-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployments
  labels:
    env: prod
    app: main
    tier: backend
    owner: alex
spec:
  selector:
    matchLabels:
      project: pro  #service with look for those PODS Labels
  template:
    metadata:
      labels:
        project: pro
    spec:
      containers:
        - name: asshole
          image: nelson9291/k8s-example:1.2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-test
  labels:
    env: prod
spec:
  selector:
    project: pro  #selecting PODS with those Labels
  ports:
    - name: app-test
      protocol: TCP
      port: 8080 #port loadBalancer
      targetPort: 8080 #port pod
  type: LoadBalancer
